data/derived/fa15/progs/unify/prog3236.ml.out
Characters 76-86:
  |Sine e -> "sin (pi*" exprToString e ")"
             ^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
